# estratto

./: Cargo.toml  README.md  estratto.wai
.github/workflows/: lint.yml  rust.yml  rustbuild.yml  test.yml
src/: lib.rs
src/core/: mod.rs
src/features/: amplitude_spectrum.rs  mod.rs  pitch.rs  power_spectrum.rs  rms.rs  zcr.rs
src/features/spectral/: mfcc.rs  mod.rs  power_spectrum.rs  spectral_bandwidth.rs  spectral_centroid.rs  spectral_contrast.rs  spectral_flatness.rs  spectral_rolloff.rs
src/filters/: dct.rs  mel.rs  mod.rs
src/utils/: correlation.rs  data.json  fft.rs  mod.rs  test.rs
