[package]
name = "estratto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

wai-bindgen-rust = "0.2.3"

[package.metadate.wapm]
namespace = "cttm"
abi = "none"
bindings = {wai-version = "0.1.0", exports = "estratto.wai"}


[dependencies]
wai-bindgen-rust = "0.2.3"
