[package]
name = "estratto"
version = "0.0.1"
edition = "2021"
license = "MIT"
keywords = ["audio", "audio-analysis", "dsp", "feature-extraction", "audio-features"]
categories = ["multimedia::audio", "multimedia", "science"]
documentation = "https://docs.rs/estratto"
repository = "https://github.com/AmberJBlue/estratto/tree/main"
authors = ["Amber Blue <hi@amber.blue>"]
description = "estratto is a powerful and user-friendly Rust library designed for extracting rich audio features from digital audio signals."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustfft = "6.0.1"

[dev-dependencies]
approx = "0.5.1"
serde = "1.0.7"
serde_derive = "1.0.7"
serde_json = "1.0"
rand = "0.8.4"
clippy = "0.0.302"
